feat: add product creation